apps/frontend/scss/wow.scss
// Class colours
.class-1,
.class-warrior {
    --colour-class: #{$colour-class-1};
    --image-border-color: #{colour-class-1};
    color: $colour-class-1;

    > img {
        border-color: #{$colour-class-1};
    }
}

.class-2,
.class-paladin {
    --colour-class: #{$colour-class-2};
    --image-border-color: #{colour-class-2};
    color: $colour-class-2;

    > img {
        border-color: #{$colour-class-2};
    }
}

.class-3,
.class-hunter {
    --colour-class: #{$colour-class-3};
    --image-border-color: #{colour-class-3};
    color: $colour-class-3;

    > img {
        border-color: #{$colour-class-3};
    }
}

.class-4,
.class-rogue {
    --colour-class: #{$colour-class-4};
    --image-border-color: #{colour-class-4};
    color: $colour-class-4;

    > img {
        border-color: #{$colour-class-4};
    }
}

.class-5,
.class-priest {
    --colour-class: #{$colour-class-5};
    --image-border-color: #{colour-class-5};
    color: $colour-class-5;

    > img {
        border-color: #{$colour-class-5};
    }
}

.class-6,
.class-death-knight {
    --colour-class: #{$colour-class-6};
    --image-border-color: #{colour-class-6};
    color: $colour-class-6;

    > img {
        border-color: #{$colour-class-6};
    }
}

.class-7,
.class-shaman {
    --colour-class: #{$colour-class-7};
    --image-border-color: #{colour-class-7};
    color: $colour-class-7;

    > img {
        border-color: #{$colour-class-7};
    }
}

.class-8,
.class-mage {
    --colour-class: #{$colour-class-8};
    --image-border-color: #{colour-class-8};
    color: $colour-class-8;

    > img {
        border-color: #{$colour-class-8};
    }
}

.class-9,
.class-warlock {
    --colour-class: #{$colour-class-9};
    --image-border-color: #{colour-class-9};
    color: $colour-class-9;

    > img {
        border-color: #{$colour-class-9};
    }
}

.class-10,
.class-monk {
    --colour-class: #{$colour-class-10};
    --image-border-color: #{colour-class-10};
    color: $colour-class-10;

    > img {
        border-color: #{$colour-class-10};
    }
}

.class-11,
.class-druid {
    --colour-class: #{$colour-class-11};
    --image-border-color: #{colour-class-11};
    color: $colour-class-11;

    > img {
        border-color: #{$colour-class-11};
    }
}

.class-12,
.class-demon-hunter {
    --colour-class: #{$colour-class-12};
    --image-border-color: #{colour-class-12};
    color: $colour-class-12;

    > img {
        border-color: #{$colour-class-12};
    }
}

// Junk
.quality0 {
    --image-border-color: #{$quality0-border};
    --link-color: #{$quality0-color};
    color: $quality0-color;

    div, img {
        border-color: $quality0-border;
    }
}
img.quality0 {
    border-color: $quality0-border;
}

// Common
.quality1 {
    --image-border-color: #{$quality1-border};
    --link-color: #{$quality1-color};
    color: $quality1-color;

    div,
    img,
    img &
    {
        border-color: $quality1-border;
    }
}
.quality1-border {
    border-color: $quality1-border;
}
/*img.quality1 {
    border-color: $quality1-border;
}*/

// Uncommon
.quality2 {
    --image-border-color: #{$quality2-border};
    --link-color: #{$quality2-color};
    color: $quality2-color;

    div, img {
        border-color: $quality2-border;
    }
}
.quality2-border {
    border-color: $quality2-border;
}
img.quality2 {
    border-color: $quality2-border;
}

// Rare
.quality3 {
    --image-border-color: #{$quality3-border};
    --link-color: #{$quality3-color};
    color: $quality3-color;

    div, img {
        border-color: $quality3-border;
    }
}
.quality3-border {
    border-color: $quality3-border;
}
img.quality3 {
    border-color: $quality3-border;
}

// Epic
.quality4 {
    --image-border-color: #{$quality4-border};
    --link-color: #{$quality4-color};
    color: $quality4-color;

    div, img {
        border-color: $quality4-border;
    }
}
.quality4-border {
    border-color: $quality4-border;
}
img.quality4 {
    border-color: $quality4-border;
}

// Legendary
.quality5 {
    --image-border-color: #{$quality5-border};
    --link-color: #{$quality5-color};
    color: $quality5-color;

    div, img {
        border-color: $quality5-border;
    }
    span {
        color: #ffb400;
    }
}
.quality5-border {
    border-color: $quality5-border;
}
img.quality5 {
    border-color: $quality5-border;
}

// Artifact
.quality6 {
    --image-border-color: #{$quality6-border};
    --link-color: #{$quality6-color};
    color: $quality6-color;

    div, img {
        border-color: $quality6-color;
    }
}
// Heirloom
.quality7 {
    --image-border-color: #{$quality7-border};
    --link-color: #{$quality7-color};
    color: $quality7-color;

    div,img {
        border-color: $quality7-color;
    }
}

